--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-.main {
+main {
   margin-top: 5%;
 }
 
@@ -26,44 +26,44 @@ body {
   margin: auto;
 }
 
-.container .section {
+.container section {
   color: hsl(0, 0%, 100%);
   width: 50%;
   padding: 30px;
 }
 
-.container .section .container-texts {
+.container section .container-texts {
   padding: 20px;
 }
 
-.container .section .container-texts h1 {
+.container section .container-texts h1 {
   padding: 20px;
 }
 
-.container .section .container-texts span {
+.container section .container-texts span {
   color: hsl(277, 64%, 61%);
 }
 
-.container .section .container-texts p {
+.container section .container-texts p {
   padding: 20px;
   font-size: 14px;
   color: hsla(0, 0%, 100%, 0.75);
   line-height: 25px;
 }
 
-.container .section .container-3 {
+.container section .container-3 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 20px;
 }
 
-.container .section .container-3 h2 {
+.container section .container-3 h2 {
   text-transform: uppercase;
   padding: 0 20px;
 }
 
-.container .section .container-3 h3 {
+.container section .container-3 h3 {
   color: hsla(0, 0%, 100%, 0.75);
   text-transform: uppercase;
   font-weight: 400;
@@ -96,22 +96,22 @@ footer a {
 }
 
 @media screen and (max-width: 950px) {
-  .container .section .container-texts {
+  .container section .container-texts {
     padding: 0;
   }
 
-  .container .section .container-texts h1 {
+  .container section .container-texts h1 {
     padding: 10px;
     text-align: center;
   }
 
-  .container .section .container-3 {
+  .container section .container-3 {
     padding: 0 20px;
   }
 }
 
 @media screen and (max-width: 805px) {
-  .main {
+  main {
     padding: 30px;
   }
 
@@ -119,7 +119,7 @@ footer a {
     height: auto;
   }
 
-  .container .section {
+  .container section {
     padding: 10px;
   }
 
@@ -131,35 +131,35 @@ footer a {
     font-size: 25px;
   }
 
-  .container .section .container-texts p {
+  .container section .container-texts p {
     font-size: 12px;
     text-align: center;
   }
 
-  .container .section .container-3 h2 {
+  .container section .container-3 h2 {
     font-size: 15px;
   }
 
-  .container .section .container-3 h3 {
+  .container section .container-3 h3 {
     font-size: 10px;
   }
 
-  .container .section .container-3 {
+  .container section .container-3 {
     text-align: center;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
   }
 
-  .container .section .container-3 .container-followers,
-  .container .section .container-3 .container-templates,
-  .container .section .container-3 .container-queries {
+  .container section .container-3 .container-followers,
+  .container section .container-3 .container-templates,
+  .container section .container-3 .container-queries {
     margin-top: 20px;
   }
 }
 
 @media screen and (max-width: 660px) {
-  .main {
+  main {
     width: 100%;
   }
 
@@ -179,18 +179,18 @@ footer a {
     max-height: 300px;
   }
 
-  .container .section {
+  .container section {
     order: 2;
     width: 100%;
     justify-content: center;
     padding: 0;
   }
 
-  .container .section .container-texts p {
+  .container section .container-texts p {
     padding: 20px;
   }
 
-  .container .section .container-3 {
+  .container section .container-3 {
     margin-bottom: 20px;
   }
 }
