--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ body {
   background: hsl(233, 47%, 7%);
   font-size: 15px;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  /*para centrar contenido*/
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
@@ -76,7 +82,7 @@ main {
 }
 
 .container-img img {
-  filter: opacity(0.3) drop-shadow(0 0 0 hsl(277, 64%, 61%));
+  filter: opacity(0.5) drop-shadow(0 0 0 hsl(277, 95%, 50%));
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
@@ -161,6 +167,7 @@ footer a {
 @media screen and (max-width: 660px) {
   main {
     width: 100%;
+    margin-top: 20px;
   }
 
   .container {
